service.log
/Users/yasufumi/miniforge3/lib/python3.10/site-packages/torch/amp/autocast_mode.py:270: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling
  warnings.warn(
  File "daily_paper_video.py", line 38
    candidate = f"{base}_v{i}{ext}"
                                  ^
SyntaxError: invalid syntax
